--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -13,7 +13,7 @@ html
   font-size: $font-size
 
 body
-  font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", "Roboto", sans-serif
+  font-family: "Source Code", -apple-system, BlinkMacSystemFont, sans-serif
   font-weight: $font-weight
   line-height: $line-height
   margin: 0
