--- a/_sass/font.sass
+++ b/_sass/font.sass
@@ -1,12 +1,42 @@
 @media (min-width: 50em)
   @font-face
-    font-family: 'PT Sans'
-    src: local('PT Sans'), local('PTSans-Regular'), url('../fonts/PTSans-Regular.woff') format('woff')
-    font-weight: normal
+    font-family: 'Source Code'
+    src: url('../fonts/SourceCodePro-ExtraLight.ttf')
+    font-weight: 200
     font-style: normal
 
   @font-face
-    font-family: 'PT Sans'
-    src: local('PT Sans Bold'), local('PTSans-Bold'), url('../fonts/PTSans-Bold.woff') format('woff')
-    font-weight: bold
+    font-family: 'Source Code'
+    src: url('../fonts/SourceCodePro-Light.ttf')
+    font-weight: 300
+    font-style: normal
+
+  @font-face
+    font-family: 'Source Code'
+    src: url('../fonts/SourceCodePro-Regular.ttf')
+    font-weight: 400
+    font-style: normal
+
+  @font-face
+    font-family: 'Source Code'
+    src: url('../fonts/SourceCodePro-Medium.ttf')
+    font-weight: 500
+    font-style: normal
+
+  @font-face
+    font-family: 'Source Code'
+    src: url('../fonts/SourceCodePro-SemiBold.ttf')
+    font-weight: 600
+    font-style: normal
+
+  @font-face
+    font-family: 'Source Code'
+    src: url('../fonts/SourceCodePro-Bold.ttf')
+    font-weight: 700
+    font-style: normal
+
+  @font-face
+    font-family: 'Source Code'
+    src: url('../fonts/SourceCodePro-Black.ttf')
+    font-weight: 800
     font-style: normal
